--- a/Index.html
+++ b/Index.html
@@ -40,7 +40,7 @@
     </section>
     
     <footer class="text-center mt-10 py-6">
-        <p class="text-gray-300">&copy; 2024 Mi Portafolio</p>
+        <p class="text-gray-300">&copy; 2024 Julian Gomez Ortiz</p>
     </footer>
     
 </body>
