--- a/Index.html
+++ b/Index.html
@@ -14,13 +14,13 @@
 <body class="text-white font-sans">
     
     <header class="text-center py-10">
-        <h1 class="text-4xl font-bold">Mi Portafolio</h1>
+        <h1 class="text-4xl font-bold">Julian Gomez Ortiz</h1>
         <p class="text-lg text-gray-300">Desarrollador Web | Frontend | Backend</p>
     </header>
 
     <section class="max-w-4xl mx-auto bg-white bg-opacity-10 p-6 rounded-xl shadow-lg">
-        <h2 class="text-2xl font-semibold">Sobre Mí</h2>
-        <p class="text-gray-300 mt-2">Soy un desarrollador web apasionado por crear experiencias digitales únicas. Me especializo en HTML, CSS, JavaScript y frameworks modernos.</p>
+        <h2 class="text-2xl font-semibold">Habilidades</h2>
+        <p class="text-gray-300 mt-2">Actualmente soy un desarrollador web apasionado por el backend-development, con conocimientos de lenguajes como JavaScript, Node.Js, Express.Js, Java y Python. A su vez, con amplios conocimientos de bases de datos relacionales MySQL y no relacionales como MongoDB, añadiendole el conocimiento acerca de frameworks como Express.Js, Spring, Angular, TypeScript</p>
     </section>
     
     <section class="max-w-4xl mx-auto mt-10">
